McConnellProject/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\RD\Desktop\McConnellProject (2)\McConnellProject
-d
C:\Users\RD\Desktop\McConnellProject (2)\McConnellProject\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\RD\Desktop\McConnellProject (2)\McConnellProject\Driver.java
<---- end of javadoc command ---->
Loading source file C:\Users\RD\Desktop\McConnellProject (2)\McConnellProject\Driver.java...
C:\Users\RD\Desktop\McConnellProject (2)\McConnellProject\Driver.java:237: error: ')' expected
                    if (isaac.intersects(tt1)
                                             ^
C:\Users\RD\Desktop\McConnellProject (2)\McConnellProject\Driver.java:241: error: ')' expected
                    if (isaac.intersects(tt2)
                                             ^
C:\Users\RD\Desktop\McConnellProject (2)\McConnellProject\Driver.java:245: error: ')' expected
                    if (isaac.intersects(tt3)
                                             ^
C:\Users\RD\Desktop\McConnellProject (2)\McConnellProject\Driver.java:249: error: ')' expected
                    if (isaac.intersects(tt4)
                                             ^
4 errors
